<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_pt_br"
        android:title="Voz POrtugues(BR)"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_en_us"
        android:title="Voz Inglês"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_spa_esp"
        android:title="Voz Espanhol"
        app:showAsAction="never" />

    <!---<item
        android:id="@+id/action_check_data"
        android:title="@string/action_check_data"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_install_data"
        android:title="@string/action_install_data"
        app:showAsAction="never" />-->
</menu>
