<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    <EditText
        android:id="@+id/tMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Olá, bom dia." />

    <Button
        android:onClick="onClickFalarTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Falar o Texto" />

    <!--<Button
        android:onClick="onClickSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Salvar Arquivo" />

    <Button
        android:onClick="onClickFalarArquivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Falar do Arquivo" />-->


</LinearLayout>